exercises/project1/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project1-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project1
  template:
    metadata:
      labels:
        app: project1
    spec:
      containers:
        - name: project1
          image: sahilrajput03/project1-img
